--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(/img/rain.gif);
+  background-image: url(img/rain.gif);
   background-size: cover;
   background-attachment: fixed;
   height: 100vh;
